--- a/lib/theme/tabs.scss
+++ b/lib/theme/tabs.scss
@@ -69,6 +69,8 @@
     line-height: 44px;
     font-size: 12px;
     color: $--color-text-secondary;
+    width: 20px;
+    text-align: center;
   }
   @include e(nav-next) {
     right: 0;
@@ -210,6 +212,7 @@
     background: $--color-white;
     border: 1px solid $--border-color-base;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.12), 0 0 6px 0 rgba(0,0,0,0.04);
+    margin-top: 15px;
 
     > .el-tabs__content {
       padding: 15px;
